// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@artifak/grid Grid should render 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hgPXWI"
    display="grid"
  >
    <div
      class="sc-htpNat bCJgVN"
    >
      1
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      2
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      3
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      4
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      5
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render grid-auto-columns style if no columnSize prop is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH ddAyuQ"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-htpNat bCJgVN"
    >
      1
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      2
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      3
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      4
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      5
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;

exports[`@artifak/grid Grid should render gridGap style if a value is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH bboId"
    data-testid="grid"
    display="grid"
  >
    <div
      class="sc-htpNat bCJgVN"
    >
      1
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      2
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      3
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      4
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      5
    </div>
    <div
      class="sc-htpNat bCJgVN"
    >
      6
    </div>
  </div>
</DocumentFragment>
`;
